更新base64 加密方法, 支持jdk1.7